# checkers

./: CheckersBIB203.cpp  README.md  VSWorkspaceState.json  Сhecker.sln
vs/: cmake.db  slnx.sqlite
vs/new2/v16/: Browse.VC.db
Сhecker/: Board.h  CMakeLists.txt  Checker_attribute.h  Checkers_placement.h  Game.h  Square_attribute.h  main.cpp  Сhecker.vcxproj  Сhecker.vcxproj.filters
Сhecker/Debug/: vc142.idb  Сhecker.exe.recipe  Сhecker.ilk
Сhecker/Debug/Сhecker.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  Сhecker.lastbuildstate
